fileapi: Add CONFIGURE_DEPENDS glob info to cmakeFiles object

Fixes: #25668
Co-authored-by: Brad King <brad.king@kitware.com>